<resources>
    <!--
        List of defined strings
    -->
    <string name="app_name">IMAGician</string>

    <string name="username">Luke_Skywalker</string>

    <string name="send">Send</string>
    <string name="confirm">Confirm</string>

    <string name="status_pending">Pending</string>
    <string name="status_rejected">Rejected</string>
    <string name="status_granted">Granted</string>

    <string name="imageinfo">Image Info</string>
    <string name="file_name">Title</string>
    <string name="fname">Michigan.jpg</string>
    <string name="creator_name">Username</string>
    <string name="cname">another_user</string>
    <string name="real_name">Real Name</string>
    <string name="email_addr">Email Address</string>
    <string name="phone">Phone Number</string>
    <string name="pnumber">(734)546-9999</string>
    <string name="timestamp">Time Stamp</string>
    <string name="tstamp">Feb. 2, 15:40. 2022</string>
    <string name="msg">Photo of Michigan winter Photo of Michigan winter Photo of Michigan winter Photo of Michigan winter Photo of Michigan winter</string>

    <string name="req_info">Request Info</string>
    <string name="req_sent_to">Request sent to:</string>
    <string name="req_msg">Thank you for sharing this beautiful photo! I’m writing a guide for tourists and I’m asking for the permission to use this photo in my article. It WILL be used to make profit and it will be published on twitter. Thank you! </string>
    <string name="req_status">REJECTED</string>

    <string name="req_list">Request: </string>
    <string name="req_by">Requested by:</string>
    <string name="req_name">Ron</string>
    <string name="req_msg_short">Thank you for sharing this beautiful photo! I’m...</string>
    <string name="see_more">SEE MORE</string>
    <string name="op_grant">GRANT</string>
    <string name="op_reject">REJECT</string>
    <string name="op_cancel">Cancel</string>
    <string name="op_back">Back</string>

    <string name="examine_watermark">Examine Watermark</string>
    <string name="new_watermark">New Watermark</string>
    <string name="my_creations">My Creations</string>
    <string name="image_bmp">image.bmp</string>
    <string name="_1_pending_request">1 pending request</string>
    <string name="embed_timestamp">Watermark embedded at 10:00 PM May 12, 2021</string>
    <string name="request_timestamp">Usage right requested at 10:00 PM May 12, 2021</string>
    <string name="sent_requests">Sent Requests</string>
    <string name="from_album">From Album</string>
    <string name="image_to_encode_or_decode">Image to encode or decode</string>
    <string name="image_processing">Image Processing</string>
    <string name="image_filename_jpg">Image_filename.jpg</string>
    <string name="choose_fields_to_include">Choose Fields to Include</string>
    <string name="title_">Title:</string>
    <string name="name_watermark">Name the watermark</string>
    <string name="icon">Icon</string>
    <string name="message_">Message:</string>
    <string name="message_text">this is the message. this is the message. this is the message.</string>
    <string name="title_activity_req_detail">ReqDetailActivity</string>

    <string name="embed_info">Embedded Info:</string>
    <string name="lock">lock</string>
    <string name="last_edit">Last Edited Time</string>
    <string name="filezip">File</string>
    <string name="zip_content">(file.zip 25MB)</string>
    <string name="dl">Download</string>
    <string name="authorized">Authorized</string>

    <string name="leave_msg">Leave your message:</string>
    <string name="send_from">Send From:</string>
    <string name="send_to">Send To:</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save_to_album">Save to Album</string>
    <string name="watermark_embedded">Watermark Embedded</string>
    <string name="share">Share</string>
    <string name="include_anything_you_want_to_say">Include anything you want to say</string>
    <string name="timestamp_">Timestamp:</string>
    <string name="mock_timestamp">March 12, 2022 14:53</string>
    <string name="username_">Username:</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password_strength_very_strong">VERY STRONG</string>
    <string name="password_strength_strong">STRONG</string>
    <string name="password_strength_medium">MEDIUM</string>
    <string name="password_strength_weak">WEAK</string>
    <string name="email_">Email:</string>
    <string name="skywalker_umich_edu">skywalker@umich.edu</string>
    <string name="phone_">Phone:</string>
    <string name="_123456789">123456789</string>
    <string name="from_camera">From Camera</string>
    <string name="warning_image_modification_detected">Warning: image modification detected!</string>
    <string name="enter_your_password_here"> .  Enter your password here</string>
    <string name="_16mb"><![CDATA[<16MB]]></string>
    <string name="contact_author">Contact Creator 》</string>
    <string name="encryption">Encryption:</string>
    <string name="protect_message_with_password">Protect Message With Password</string>
    <string name="enter_the_password"> Enter the password</string>
    <string name="password">Password:</string>
    <string name="decrypt_message">Decrypt Message</string>

</resources>