<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:background="@color/blue"
    android:paddingTop="@dimen/info_pad">

    <ImageView
        android:id="@+id/file_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_file" />

    <TextView
        android:id="@+id/FileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/file_name"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/file_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jpg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fname"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>